# reimagined-funicular

./: .gitignore  setup.cfg  setup.py  tox.ini
src/funicular/: __init__.py  __main__.py  cli.py  exceptions.py  github.py
test/unit/: test_cli.py
