[metadata]
name = funicular
;version = attr: funicular.version
description = Tool to transport GitHub project data to another format
long-description = file: README.rst
home-page = https://github.com/sigmavirus24/reimagined-funicular
author = Ian Stapleton Cordasco
author-email = graffatcolmingov@gmail.com
keywords = github projects issues data metadata
license = MIT
license-file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable,
    Environment :: Console,
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.6
include-package-data = True
packages = find:
; Presently setuptools needs package-dir defined here and in setup.py
; https://github.com/pypa/setuptools/issues/1136
package-dir =
    = src
install-requires =
    github3.py >= 1.2.0
    attrs >= 18.2.0
    structlog >= 18.2.0

[options.packages.find]
where = src

[options.extras_require]
colour = colorama

[bdist_wheel]
universal = 1
